--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -35,6 +35,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 
 /* Nav styles */
 nav{
@@ -109,4 +112,18 @@ main{
 .item-description{
     font-weight: 600;
 
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+/* skills section styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0 4px 4px 0 #000000;
 }
