--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -127,3 +127,42 @@ main section{
     border-radius: 5px;
     box-shadow: 0 4px 4px 0 #000000;
 }
+/* resume section styles */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-description, .experience-sub-title{
+    color: #757575;
+}
+.resume hr{
+    margin: 30px 0;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+/* footer styles */
+
+footer{
+   padding: 130px 230px; 
+   display: flex;
+   gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"] , footer input[type="email"] , footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    margin-bottom: 24px;
+    border: none;
+}
