--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,7 +5,7 @@
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings:
-    "wdth" 100;
+    "width" 100;
 }
 /* shared style */
 .secondary-background{
@@ -165,4 +165,22 @@ footer input[type="text"] , footer input[type="email"] , footer textarea{
     width: 100%;
     margin-bottom: 24px;
     border: none;
+}
+
+/* responsive media query */
+.hide{
+    display: none;
+}
+@media screen and (max-width:576px){
+    .skills-container , .resume-container ,footer,.about-items{
+        flex-direction: column;
+
+    }
+    footer{
+        padding: 20px;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    
 }
